# seekr

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: seekr-dev-schedule.md  seekr-dev-spec.md  seekr-security.md  seekr-unified-plan.md
seekr/: __init__.py
seekr/mcp/: dart_server.py
seekr/tools/: base.py
seekr/tools/dart/: client.py
tests/tools/: test_dart_client.py
